--- a/index.html
+++ b/index.html
@@ -4,11 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="script.js"></script>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <h1>Rock, Paper, Scissors!</h1>
-    <button onclick="playGame()">Play!</button>
+    <!-- <button onclick="playGame()">Play!</button> -->
+    <div id="container">
+        <p>Make your decision!</p>
+        <div id="selection">
+            <button id="rock">Rock</button>
+            <button id="paper">Paper</button>
+            <button id="scissors">Scissors</button>
+        </div>
+        <div id="result"></div>
+        <div id="score"></div>
+    </div>
+    <!--Javascript to load after html-->
+    <script src="script2.js"></script>
 </body>
 </html>
